--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ma Basket Révolutionnaire</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: #ff5733;
+        }
+        p {
+            color: #333;
+            font-size: 18px;
+        }
+        .bouton {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff5733;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Bienvenue sur notre site !</h1>
     <p>Découvrez notre basket innovante.</p>
+    <a href="#" class="bouton">En savoir plus</a>
 </body>
 </html>
+
