--- a/index.html
+++ b/index.html
@@ -5,34 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ma Basket Révolutionnaire</title>
     <style>
+        /* Styles généraux */
         body {
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
             text-align: center;
             padding: 50px;
         }
+
+        /* Titre */
         h1 {
             color: #ff5733;
+            font-size: 28px;
+            margin-bottom: 10px;
         }
+
+        /* Texte */
         p {
             color: #333;
             font-size: 18px;
+            margin-bottom: 20px;
         }
+
+        /* Image stylée */
+        img {
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            margin-bottom: 20px;
+        }
+
+        /* Bouton stylé */
         .bouton {
             display: inline-block;
-            padding: 10px 20px;
+            padding: 12px 25px;
             background-color: #ff5733;
             color: white;
             text-decoration: none;
+            font-size: 18px;
             border-radius: 5px;
-            margin-top: 20px;
+            transition: 0.3s ease-in-out;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Effet au survol */
+        .bouton:hover {
+            background-color: #e04e2a;
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-    <h1>Bienvenue sur notre site !</h1>
-    <p>Découvrez notre basket innovante.</p>
+    <h1>Découvrez notre basket innovante</h1>
+    <p>Un design futuriste et une technologie de pointe.</p>
+
+    <!-- Image placée sous le texte -->
+    <img src="basket.jpg" alt="Ma Basket Révolutionnaire" width="300">
+
+    <!-- Bouton placé sous l'image -->
     <a href="#" class="bouton">En savoir plus</a>
 </body>
 </html>
-
