--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <p>Un design futuriste et une technologie de pointe.</p>
 
     <!-- Image placée sous le texte -->
-    <img src="basket.jpg" alt="Ma Basket Révolutionnaire" width="300">
+    <img src="sneak.png" alt="Ma Basket Révolutionnaire" width="300">
 
     <!-- Bouton placé sous l'image -->
     <a href="#" class="bouton">En savoir plus</a>
